@@ -757,6 +757,7 @@ public class ProjectHelper2 extends ProjectHelper {
             Project project = context.getProject();
             Target target = new Target();
             target.setProject(project);
+            target.setLocation(new Location(context.getLocator()));
             context.addTarget(target);
 
             for (int i = 0; i < attrs.getLength(); i++) {
@@ -803,12 +804,9 @@ public class ProjectHelper2 extends ProjectHelper {
             // If the name has already been defined ( import for example )
             if (currentTargets.containsKey(name)) {
                 if (!context.isIgnoringProjectTag()) {
-                    // not in a import'ed file
+                    // not in an import'ed file
                     throw new BuildException(
-                        "Duplicate target '" + name + "'",
-                        new Location(context.getLocator().getSystemId(),
-                                     context.getLocator().getLineNumber(),
-                                     context.getLocator().getColumnNumber()));
+                        "Duplicate target '" + name + "'", target.getLocation());
                 }
                 // Alter the name.
                 if (context.getCurrentProjectName() != null) {
